--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
-    <title>練習</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/vue@3.2.45/dist/vue.global.prod.js"></script>
+    <script src="https://unpkg.com/vue-router@4.2.4/dist/vue-router.global.prod.js"></script>
+    <script src="https://unpkg.com/vue-demi@0.14.5/lib/index.iife.js"></script>
+    <script src="https://unpkg.com/pinia@2.0.28/dist/pinia.iife.prod.js"></script>
+    <script src="https://unpkg.com/axios@1.4.0/dist/axios.min.js"></script>
+
+    <title>Shop</title>
   </head>
   <body>
     <div id="app"></div>
